moved monthly / yearly button on price cards, fixed spacing;

--- a/style/Index/bootstrap.css
+++ b/style/Index/bootstrap.css
@@ -5631,7 +5631,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .breadcrumb {
     padding: 8px 15px;
     margin-bottom: 20px;
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
     border-radius: 4px;
 }
 
